syntax = "proto3";
package z11n;

service Z11nService {
    // Agent 注册，返回 Token
    rpc Register(RegisterReq) returns (RegisterRsp) {}
    // Agent 心跳，返回任务
    rpc Heartbeat(Empty) returns (stream HeartbeatRsp) {}
    // Host 信息上报
    rpc Host(HostReq) returns (Empty) {}
    // LLM 提交任务问题
    rpc PushLlmTaskQuestion(LlmTaskQuestionReq) returns (LlmTaskId) {}
    // LLM 获取任务问题
    rpc PullLlmTaskQuestion(Empty) returns (LlmTaskQuestionRsp) {}
    // LLM 提交任务答案
    rpc PushLlmTaskAnswer(LlmTaskAnswer) returns (Empty) {}
    // LLM 获取任务答案
    rpc PullLlmTaskAnswer(Empty) returns (LlmTaskAnswers) {}
}

message LlmTaskAnswers {
    repeated LlmTaskAnswer items = 1;
}

message LlmTaskAnswer {
    string id = 1;
    string content = 2;
}

message LlmTaskId {
    string id = 1;
}

message LlmTaskQuestionReq {
    string model = 1;
    string prompt = 2;
    string content = 3;
}

message LlmTaskQuestionRsp {
    LlmTaskQuestion llm_task_question = 1;
}

message LlmTaskQuestion {
    string id = 1;
    string model = 2;
    string prompt = 3;
    string content = 4;
}

message Empty {}

message HeartbeatRsp {
    oneof task {
        UploadHost upload_host = 1;
    }
}

message UploadHost {
    enum InfoType {
        SYSTEM = 0;
        DISK = 1;
        NETWORK = 2;
    }
    InfoType info_type = 1;
}

// 心跳消息请求结构体
message RegisterReq {
    // agent唯一编号，必填
    string agent_id = 1;
    // agent版本，必填
    string agent_version = 2;
}

// 心跳消息请求结构体
message RegisterRsp {
    // 认证token
    string token = 1;
}

message HostReq {
    SystemInfo system = 1;
    repeated DiskInfo disks = 2;
    repeated NetworkInfo networks = 3;
}

message SystemInfo {
    optional string name = 1;
    optional string kernel_version = 2;
    optional string os_version = 3;
    optional string host_name = 4;
    string cpu_arch = 5;
    string kernel_long_version = 6;
    uint64 total_memory = 7;
    uint64 total_swap = 8;
    repeated ProcessInfo processes = 9;
}

message ProcessInfo {
    uint32 pid = 1;
    string name = 2;
    optional string exe = 3;
    string status = 4;
}

message DiskInfo {
    string name = 1;
    string file_system = 2;
    string mount_point = 3;
    string kind = 4;
    uint64 total_space = 5;
    uint64 available_space = 6;
    bool is_removable = 7;
    bool is_read_only = 8;
}

message NetworkInfo {
    string interface_name = 1;
    uint64 total_received = 2;
    uint64 total_transmitted = 3;
    repeated string addrs = 4;
}
